--- a/ToDo.Client/todo-app/src/App.css
+++ b/ToDo.Client/todo-app/src/App.css
@@ -7,6 +7,7 @@
     width: 100vw;
     height: 100vh;
     font-family: Arial, Helvetica, sans-serif;
+    background-color: rgba(234, 228, 220, 0.971);
   }
   
   body {
@@ -14,6 +15,10 @@
     padding: 0%;
   }
   
+  h1 {
+    font-family: "Times New Roman", Times, serif;
+  }
+
   .create {
     width: 100%;
     display: flex;
